--- a/inbox/package.json
+++ b/inbox/package.json
@@ -13,7 +13,7 @@
     "ganache-cli": "^6.12.2",
     "mocha": "^8.4.0",
     "solc": "^0.4.17",
-    "truffle-hdwallet-provider": "^0.0.3",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.3.5"
   }
 }
